<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/window_side_bar_width"
    tools:context="com.dudu.fatidog.FatiDogMainActivity"
    android:background="@android:color/black">

    <!--左边控制栏-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="@dimen/font_size_m"
                android:text="@string/fati_dog"/>
            <Switch
                android:id="@+id/sw_fatidog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/switch_text_space"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/thumb_selctor"
                android:track="@drawable/track_selctor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/switch_line_between_space"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="@dimen/font_size_m"
                android:text="@string/boot_start"/>
            <Switch
                android:id="@+id/sw_boot_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/switch_text_space"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/thumb_selctor"
                android:track="@drawable/track_selctor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/switch_line_between_space"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="@dimen/font_size_m"
                android:text="@string/experience_mode"/>
            <Switch
                android:id="@+id/sw_experience_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/switch_text_space"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/thumb_selctor"
                android:track="@drawable/track_selctor" />
        </LinearLayout>
    </LinearLayout>

    <!--中间刷脸动画部分-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/anim_to_top_space"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_anim_face_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/face_recognition_frame_one" />

        <TextView
            android:id="@+id/id_tv_face_scan_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="@dimen/font_size_l"
            android:text="@string/correct_face_position_tip"/>
    </LinearLayout>

    <TextView
        android:id="@+id/id_tv_face_scan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:textSize="@dimen/font_size_m"
        android:text="@string/refresh_face"/>

    <!--右边的设备连接区域-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/connect_flag_to_top_space"
        android:layout_marginRight="@dimen/connect_flag_to_right_space">
        <ImageView
            android:id="@+id/id_iv_connect_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/connect_success"/>
        <TextView
            android:id="@+id/id_tv_connect_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/connect_flag_to_text_space"
            android:textSize="@dimen/font_size_m"
            android:text="@string/device_connect_ok_tip"/>
    </LinearLayout>
</RelativeLayout>
